--- a/index.html
+++ b/index.html
@@ -27,6 +27,24 @@
     <div class="collection">
         <div class="item">
             <div class="item-poster">
+                <img src="posters/on-the-rocks.jpg">
+            </div>
+        </div>
+
+        <div class="item">
+            <div class="item-poster">
+                <img src="posters/shirobako.jpg">
+            </div>
+        </div>
+
+        <div class="item">
+            <div class="item-poster">
+                <img src="posters/tokyo-vice.jpg">
+            </div>
+        </div>
+
+        <div class="item">
+            <div class="item-poster">
                 <img src="posters/azkaban.jpg">
             </div>
         </div>
