--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
     <div class="collection">
         <div class="item">
             <div class="item-poster">
+                <img src="posters/murray-christmas.jpg">
+            </div>
+        </div>
+        
+        <div class="item">
+            <div class="item-poster">
                 <img src="posters/on-the-rocks.jpg">
             </div>
         </div>
