--- a/index.html
+++ b/index.html
@@ -19,6 +19,30 @@
     <div class="collection">
         <div class="item">
             <div class="item-poster">
+                <img src="posters/shogun.jpg">
+            </div>
+        </div>
+
+        <div class="item">
+            <div class="item-poster">
+                <img src="posters/sakura-quest.jpg">
+            </div>
+        </div>
+
+        <div class="item">
+            <div class="item-poster">
+                <img src="posters/new-york-stories.jpg">
+            </div>
+        </div>
+
+        <div class="item">
+            <div class="item-poster">
+                <img src="posters/lost-in-translation.jpg">
+            </div>
+        </div>
+
+        <div class="item">
+            <div class="item-poster">
                 <img src="posters/murray-christmas.jpg">
             </div>
         </div>
