add new posters

--- a/index.html
+++ b/index.html
@@ -19,6 +19,60 @@
     <div class="collection">
         <div class="item">
             <div class="item-poster">
+                <img src="posters/deadpool-and-wolverine.jpg">
+            </div>
+        </div>
+
+        <div class="item">
+            <div class="item-poster">
+                <img src="posters/virgin-suicides.jpg">
+            </div>
+        </div>
+
+        <div class="item">
+            <div class="item-poster">
+                <img src="posters/fallout.jpg">
+            </div>
+        </div>
+
+        <div class="item">
+            <div class="item-poster">
+                <img src="posters/the-beguilded.jpg">
+            </div>
+        </div>
+
+        <div class="item">
+            <div class="item-poster">
+                <img src="posters/lick-the-stars.jpg">
+            </div>
+        </div>
+
+        <div class="item">
+            <div class="item-poster">
+                <img src="posters/the-ring-bling.jpg">
+            </div>
+        </div>
+
+        <div class="item">
+            <div class="item-poster">
+                <img src="posters/kikis.jpg">
+            </div>
+        </div>
+
+        <div class="item">
+            <div class="item-poster">
+                <img src="posters/club-zero.jpg">
+            </div>
+        </div>
+
+        <div class="item">
+            <div class="item-poster">
+                <img src="posters/shirobako-the-movie.jpg">
+            </div>
+        </div>
+
+        <div class="item">
+            <div class="item-poster">
                 <img src="posters/shogun.jpg">
             </div>
         </div>
